--- a/src/main/resources/templates/registro-bem-estar.html
+++ b/src/main/resources/templates/registro-bem-estar.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Registro de Bem-Estar</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 
 <h1>Gerenciar Registro de Bem-Estar</h1>
 
-<!-- Formulário de Cadastro / Edição -->
+<!-- FORMULÁRIO -->
 <h2 th:text="${registroDTO.idRegistro != null} ? 'Editar Registro' : 'Novo Registro'"></h2>
 
 <form th:action="@{/bemestar/salvar}" th:object="${registroDTO}" method="post">
@@ -64,6 +64,7 @@
         <th>Ações</th>
     </tr>
     </thead>
+
     <tbody>
     <tr th:each="reg : ${registros}">
         <td th:text="${reg.idRegistro}"></td>
