--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${tituloPagina}">GS Synapse</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-    <script defer th:src="@{/js/sidebar.js}"></script>
+    <link rel="stylesheet" th:href="@{css/style.css}">
+    <script defer th:src="@{/js/script.js}"></script>
 </head>
 
 <body>
