--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Gerenciar Usuários</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <script defer th:src="@{/js/script.js}"></script>
 </head>
 <body>
 
