--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" th:href="@{css/style.css}">
+    <script defer th:src="@{/js/script.js}"></script>
 </head>
 
 <body>
@@ -16,6 +18,8 @@
             <h2>Acessar Conta</h2>
 
             <form th:action="@{/login}" method="post">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
                 <label>Usuário</label>
                 <input type="text" name="username" required>
 
@@ -31,6 +35,7 @@
             <h2>Criar Conta</h2>
 
             <form th:action="@{/usuarios}" th:object="${usuarioDTO}" method="post">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
                 <label>Nome de Usuário</label>
                 <input type="text" th:field="*{nomeUsuario}" required>
