--- a/src/main/resources/templates/recomendacoes-profissionais.html
+++ b/src/main/resources/templates/recomendacoes-profissionais.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Recomendações Profissionais</title>
+    <link rel="stylesheet" th:href="@{css/style.css}">
+    <script defer th:src="@{/js/script.js}"></script>
 </head>
 
 <body>
