--- a/src/main/resources/templates/competencias.html
+++ b/src/main/resources/templates/competencias.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<head><link rel="stylesheet" th:href="@{/css/style.css}">
+    <script defer th:src="@{/js/script.js}"></script></head>
 <body th:replace="layout :: layout(conteudo='competenciasPage')"></body>
 
 <th:block th:fragment="competenciasPage">
