--- a/src/main/resources/templates/recomendacoes-saude.html
+++ b/src/main/resources/templates/recomendacoes-saude.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Recomendações de Saúde</title>
-    <link rel="stylesheet" th:href="@{css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <script defer th:src="@{/js/script.js}"></script>
 </head>
 
