--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -34,11 +34,12 @@
 <main class="content">
     <div class="page-container">
 
-        <!-- Título dinamico -->
+        <!-- Título dinâmico -->
         <h1 th:text="${tituloPagina}">Título da Página</h1>
 
         <!-- Onde os fragments serão inseridos -->
         <div th:replace="${conteudo}"></div>
+
     </div>
 </main>
 
