--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,13 +20,11 @@
 
             <!-- CSRF token removido, pois o CSRF está desabilitado no SecurityConfig -->
             <form th:action="@{/login}" method="post">
-                <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> REMOVIDO -->
-
                 <label>Usuário</label>
-                <input type="text" name="username" required>
+                <input type="text" name="nomeUsuario" required>
 
                 <label>Senha</label>
-                <input type="password" name="password" required>
+                <input type="password" name="senhaUsuario" required>
 
                 <button type="submit">Entrar</button>
             </form>
