--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,7 +71,7 @@
                 <input type="text" id="nivelExperiencia" th:field="*{nivelExperiencia}" required placeholder="Ex: Pleno">
                 <p th:if="${#fields.hasErrors('nivelExperiencia')}" th:errors="*{nivelExperiencia}" class="validation-error"></p>
 
-                <button type="submit" class="button secondary-button">Cadastrar</button>
+                <button type="submit" class="button secondary-button">Cadastrar!</button>
             </form>
         </div>
 
